--- a/src/app/shared/components/course-card/course-card.component.scss
+++ b/src/app/shared/components/course-card/course-card.component.scss
@@ -31,4 +31,14 @@
       margin-top: 16px;
     }
   }
+
+  &__buttons {
+    display: flex;     
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    gap: 10px;
+    white-space: nowrap;
+
+  }
 }
