--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,3 +9,12 @@
     background-color: $color-white;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
 }
+
+.header-user-controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    button {
+        margin-left: 10px;
+    }
+}
