--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="app-root">
+  <router-outlet></router-outlet>
   <!-- Search component -->
   <!--<app-search></app-search>-->
 
@@ -10,10 +11,10 @@
   <!--<app-course-card></app-course-card>-->
 
   <!-- Login Form component -->
-  <!--<app-login-form></app-login-form>-->
+  <!-- <app-login-form></app-login-form> -->
 
   <!-- Login Form component -->
-  <!--<app-registration-form></app-registration-form>-->
+  <!-- <app-registration-form></app-registration-form> -->
 
   <!-- Login Form component -->
   <!--<app-course-form></app-course-form>-->
