--- a/src/app/shared/components/course-card/course-card.component.html
+++ b/src/app/shared/components/course-card/course-card.component.html
@@ -10,8 +10,8 @@
               <b>Authors: </b>
               {{course?.authors}}
             </div>
-            <div><b>Duration: </b><span class="course-card__duration">{{course?.duration}}</span></div>
-            <div><b>Created: </b><span class="course-card__date">{{course?.creationDate}}</span></div>
+            <div><b>Duration: </b><span class="course-card__duration">{{course?.duration | duration}}</span></div>
+            <div><b>Created: </b><span class="course-card__date">{{course?.creationDate | customDate}}</span></div>
         </div>
         <div class="course-card__info-actions">
             <div class="course-card__buttons">
