--- a/src/app/shared/components/course-form/course-form.component.html
+++ b/src/app/shared/components/course-form/course-form.component.html
@@ -1,14 +1,17 @@
 <!-- Replace ::text:: with your code -->
 <h2>Create / Edit Course</h2>
-<form>
+<form [formGroup]="courseForm" (ngSubmit)="onSubmit()">
   <div class="app-plate">
     <div class="course">
       <h3>Main Info</h3>
       <div class="form__control">
         <label for="title">Title</label>
         <!--Use the name `title` for the form control.-->
-        <input type="text" id="title" placeholder="Input text"/>
-        <span id="titleErrorMessage" class="text-danger">Title is required.</span>
+        <input type="text" id="title" formControlName="title" placeholder="Course title"/>
+        <span *ngIf="title?.errors?.['required'] && (title?.dirty || title?.touched || courseForm.touched)" id="titleErrorMessage" class="text-danger">Title is required.</span>
+        <span *ngIf="title?.errors?.['minlength'] && (title?.dirty || title?.touched)" id="titleErrorMessage" class="text-danger">
+          Title should be not be less than 2 symbols
+        </span>
       </div>
       <div class="form__control">
         <label for="description">Description</label>
@@ -16,40 +19,57 @@
         <textarea
           id="description"
           name="description"
-          placeholder="Input text"
+          placeholder="Course description"
+          formControlName="description"
           rows="4"
           cols="5"
         ></textarea>
-        <span id="descriptionErrorMessage" class="text-danger">Description is required.</span>
+        <span *ngIf="description?.errors?.['required'] && (description?.dirty || description?.touched || courseForm.touched)" id="descriptionErrorMessage" class="text-danger">Description is required.</span>
+        <span *ngIf="description?.errors?.['minlength'] && (description?.dirty || description?.touched)" id="descriptionErrorMessage" class="text-danger">Description should be not be less than 2 symbols</span>
       </div>
       <div class="separator"></div>
       <h3>Authors</h3>
-      <div class="form__control">
+      <div class="form__control" [formGroup]="newAuthorGroup">
         <div class="course__flex">
           <!--Use the name `author` for the form control.-->
-          <input type="text" id="author" placeholder="Input Author Name"/>
-          <app-button id="createAuthor"></app-button>
+          <input type="text" id="author" placeholder="Input Author Name" formControlName="name"/>
+          <app-button type="'button'" id="createAuthor" (click)="addAuthor()" [buttonText]="'Add Author'"></app-button>
         </div>
-        <span id="authorErrorMessage">New author should contain only latin letters and numbers.</span>
-        <div class="course__authors">
+        <span *ngIf="name?.errors && (name?.dirty || name?.touched || courseForm.touched)" id="authorErrorMessage">New author should contain only latin letters and numbers.</span>
+        <div class="course__authors" *ngFor="let author of authors.controls; let i = index">
           <!--Use the name `authors` for the form array.-->
-          ::Authors::
+          <span>{{ author.value }}</span>
+          <button (click)="addAuthorToCourse(i)">Add</button>
+          <button (click)="removeAuthor(i)">Delete</button>
         </div>
       </div>
+
+      <div class="separator"></div>
+      <h3>Course authors</h3>
+      <span *ngIf="courseAuthors.length === 0">Empty</span>
+      <div formArrayName="courseAuthors">
+        <div class="course__authors" *ngFor="let author of courseAuthors.controls; let i = index">
+          <!--Use the name `authors` for the form array.-->
+          <span>{{ author.value }}</span>
+          <button (click)="removeAuthorFromCourse(i)">Delete</button>
+        </div>
+      </div>
+      
       <div class="separator"></div>
       <h3>Duration</h3>
       <div class="form__control">
         <div class="course__flex">
           <!--Use the name `duration` for the form array.-->
-          <input type="number" id="duration" placeholder="Input duration"/>
+          <input type="number" id="duration" formControlName="duration" placeholder="Input duration"/>
           <div class="course__duration">
-            ::Duration::
+            {{duration?.value | duration}}
           </div>
         </div>
-        <span id="durationErrorMessage" class="text-danger">Duration is required.</span>
+        <span *ngIf="duration?.errors?.['required'] && (duration?.dirty || duration?.touched || courseForm.touched)" id="durationErrorMessage" class="text-danger">Duration is required.</span>
+        <span *ngIf="duration?.errors && (duration?.dirty || duration?.touched)" id="durationErrorMessage" class="text-danger">Invalid duration</span>
       </div>
       <div class="form__action">
-        <app-button></app-button>
+        <app-button type="'submit'" [buttonText]="'Create course'"></app-button>
       </div>
     </div>
   </div>
