--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -6,4 +6,49 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.action-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+}
+
+.password-wrapper .input-group {
+  position: relative;
+  display: flex;
+}
+.password-wrapper span {
+  position: fixed;
+  display: flex;
+}
+
+.password-wrapper input {
+  flex-grow: 1;
+  border: 1px solid #cfcfcf; 
+  padding: 12px 16px;
+  padding-right: 30px;
+  padding-left: 10px;
+}
+
+.toggle-password-btn {
+  position: absolute;
+  right: 0;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0 10px;
+  color: inherit;
+  outline: none;
+  display: flex;
+  align-items: center;
+}
+
+.toggle-password-btn fa-icon {
+  pointer-events: none;
 }
