--- a/src/app/shared/components/registration-form/registration-form.component.scss
+++ b/src/app/shared/components/registration-form/registration-form.component.scss
@@ -7,3 +7,11 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.full-width-button {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
