--- a/src/app/shared/components/registration-form/registration-form.component.html
+++ b/src/app/shared/components/registration-form/registration-form.component.html
@@ -21,9 +21,9 @@
       <div class="form__control">
         <!--Use the name `password` for the form control.-->
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Input text" formControlName="password" appTogglePassword #passwordToggle="toggle"/>
+        <input type="password" id="password" placeholder="Input text" formControlName="password"/>
         <span *ngIf="getPassword?.errors?.['required'] && (getPassword?.dirty || getPassword?.touched || registrationForm.touched)" id="passwordErrorMessage" class="text-danger">Password is required.</span>
-        <button (click)="passwordToggle.toggleType()"></button>
+        <!-- <button (click)="passwordToggle.toggleType()"></button> -->
       </div>
     </div>
     <div style="margin:auto;">
