--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -12,14 +12,16 @@
             Invalid Email: {{ userEmail.errors?.['invalidEmail'].value }}
           </span>
         </div>
-        <div class="form__control  password-wrapper">
+        <div class="form__control">
+             <!-- password-wrapper -->
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <div class="input-group">
-            <input class="toggle-password-btn" type="password" id="password" placeholder="Input text" name="password" [(ngModel)]="user.password" #password="ngModel" appTogglePassword #passwordToggle="toggle" required/>
-            <button style="padding: 5px 10px; font-size: 0.8em;" (click)="passwordToggle.toggleType()" aria-label="Toggle password visibility"> 
+          <div>
+            <!-- class="input-group" -->
+            <input type="password" id="password" placeholder="Input text" name="password" [(ngModel)]="user.password" #password="ngModel" required/>
+            <!-- <button style="padding: 5px 10px; font-size: 0.8em;" (click)="passwordToggle.toggleType()" aria-label="Toggle password visibility"> 
               <fa-icon [icon]="passwordToggle.type === 'password' ? toggleOff : toggleOn"></fa-icon>
-            </button>
+            </button> -->
           </div>
           <span *ngIf="password.errors?.['required'] && (password.dirty || password.touched || loginForm.submitted)" id="passwordErrorMessage" class="text-danger">Password is required.</span>
         </div>
