--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="app-search">
-  <form (ngSubmit)="onSearch()" style="display: flex;">
+  <form (ngSubmit)="onSubmit()" style="display: flex;">
     <input type="text" [(ngModel)]="searchTerm" name="searchTerm" [placeholder]="placeholder" style="width: 500px;">
     <app-button type="'submit'" [buttonText]="'Search'" style="margin-top: 4px;"></app-button>
   </form>
