--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="app-search">
   <form (ngSubmit)="onSubmit()" style="display: flex;">
     <input type="text" [(ngModel)]="searchTerm" name="searchTerm" [placeholder]="placeholder" style="width: 500px;">
-    <app-button type="'submit'" [buttonText]="'Search'" style="margin-top: 4px;"></app-button>
+    <app-button (click)="onSubmit()" type="'submit'" [buttonText]="'Search'" style="margin-top: 4px;"></app-button>
   </form>
 </div>
